--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'com.google.android.gms:play-services-appindexing:8.1.0'
     compile 'commons-io:commons-io:2.4'
+    compile 'joda-time:joda-time:2.9.2'
 }
